--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -13,6 +13,18 @@
   display: flex;
   z-index: 10;
 }
+.mobile_header {
+  width: 100%;
+  margin-top: 70px;
+  height: 400px;
+  top: 0;
+  left: 0;
+  background-color: #202020b0;
+  position: absolute;
+  z-index: 10;
+  text-align: center;
+  transition: opacity 0.5s;
+}
 .header h1 {
   color: rgb(243, 243, 242);
   cursor: pointer;
@@ -33,12 +45,29 @@
   margin-left: 50px;
   justify-content: space-around;
 }
+
 .menu ul li:hover {
   filter: brightness(0.4);
 }
 .menu ul li {
   font-size: 17px;
   font-weight: 600;
+}
+.mobile_menu ul li:hover {
+  filter: brightness(0.4);
+}
+.mobile_menu ul li {
+  font-size: 20px;
+  font-weight: 600;
+  width: 100%;
+  height: 50px;
+  list-style: none;
+  padding-top: 50px;
+}
+.mobile_menu ul {
+  padding: 0;
+  margin: 0;
+  height: 400px;
 }
 .footer {
   height: 200px;
